Change not critical deprecated methods