@@ -141,7 +141,7 @@ public class UploadRequestCloseByOwnerEmailBuilder extends GenericUploadRequestE
 		ctx.setVariable("isRestricted", true);
 		ctx.setVariable("recipients", recipients);
 		ctx.setVariable("recipientsCount", recipients.size());
-		ctx.setVariable("totalSize", new Long(5682642));
+		ctx.setVariable("totalSize", Long.valueOf(5682642));
 
 		return ctx;
 	}
